# icdl

./: .gitignore  .gitmodules  README.md  buildall_py3.sh  configure.sh  setenv_py3.sh
binutil/: search_fhicl_path.py
gallery2larcv/: CMakeLists.txt  gallery2larcv.cxx  servicesdemo_icarus.fcl  servicesdemo_sbnd.fcl
gallery2larcv/cmake/: FindRange-v3.cmake  FindRange.cmake
gallery2larcv/gallery2larcv/: CMakeLists.txt
gallery2larcv/gallery2larcv/app/: CMakeLists.txt  gallery2larcv.cxx  gallery2larcv_icarus.cxx  gallery2larcv_sbnd.cxx
geotests/: CMakeLists.txt  README.md  gen_geodata_rootfile.cc  gen_services_rootfile.cc  servicesdemo.cc  servicesdemo.fcl  servicesdemo_sbnd.fcl  view_geodata_file.ipynb
litemaker/: CMakeLists.txt
litemaker/cmake/: Config.cmake.in  FindFFTW3.cmake
litemaker/litemaker/: CMakeLists.txt
litemaker/litemaker/artmodules/: CMakeLists.txt
litemaker/litemaker/scanner/: CMakeLists.txt  LinkDef.h  ScannerAlgo.cxx  ScannerAlgo.h  ScannerAlgo.template.h  SubRun.cxx  SubRun.h  SubRunDataGetterHelper.cxx  SubRunDataGetterHelper.h  SubRunHistoryGetter.cxx  SubRunHistoryGetter.h  SubRunNavigator.cc  SubRunNavigator.h  UtilScannerAlgo.cxx  UtilScannerAlgo.h
scripts/: setup_container.sh  setup_icarusgpvm.sh  setup_sbndgpvm.sh  start_container.sh
spacepointgen/: CMakeLists.txt  README.md  gen_spacepoints_dev.cxx  gen_wireoverlap_tensors.cxx  vis_spacepoint_gen.ipynb
tutorials/: tutorial_make_truthlabeled_spacepoints.ipynb  tutorial_make_truthlabeled_spacepoints_and_voxels.ipynb  tutorial_plot_true_track_and_shower_trajectories.ipynb  tutorial_plot_wireplane_image.ipynb
